--- a/mydomain.html
+++ b/mydomain.html
@@ -1,64 +1,97 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>My Domain</title>
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
-	<style>
-		   body { 
-		     background: url(./coffee.jpg) no-repeat center center fixed; 
-		     -webkit-background-size: cover;
-		     -moz-background-size: cover;
-		     -o-background-size: cover;
-		     background-size: cover;
-			 font-family: 'Roboto Condensed', sans-serif;
-		   }
-		   
-		   .content-top {
-			   font-size:24px;
-			   font-weight:700;
-			   color:white;
-		       overflow: hidden;
-			   margin-top:40px;
-			   margin-left:40px;
-			   margin-right:40px;
-			   margin-bottom:0px;
-		       padding: 20px;
-		       background: #444;
-		       background: rgba(0, 0, 0, 0.35);
-		       text-align: left;
-		   }
-		   
-		   .content {			   
-			   color:white;
-			   margin-top:0px;
-			   margin-left:40px;
-			   margin-right:40px;
-			   margin-bottom:40px;
-		       padding: 20px;
-		       background: #444;
-		       background: rgba(0, 0, 0, 0.3);
-		       text-align: left;
-		   }
-	</style>
+<meta charset="UTF-8">
+<link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
+<link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
+<title>CodePen - Parallax backgrounds with walk cycle</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<style>
+      .tuna {
+  animation: walk-cycle 1s steps(12) infinite;
+  background: url(http://stash.rachelnabors.com/img/codepen/tuna_sprite.png) 0 0 no-repeat; 
+  height: 200px;
+  width: 400px;
+  position: absolute;
+  bottom: 1px;
+  left: 50%;
+  margin-left: -200px;
+  transform: translateZ(0); /* offers a bit of a performance boost by pushing some of this processing to the GPU in Safari*/
+}
+
+@keyframes walk-cycle {  
+  0% {background-position: 0 0; } 
+  100% {background-position: 0 -2391px; } 
+}
+
+.foreground, .midground, .background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0; left: 0;
+  translate3d(0,0,0); 
+}
+
+.foreground {
+  animation: parallax_fg linear 10s infinite both;
+  background:  url(http://stash.rachelnabors.com/24ways2012/foreground_grass.png) 0 100% repeat-x;
+  z-index: 3;
+}
+
+@keyframes parallax_fg {  
+  0% { background-position: -3584px 100%;} 
+  100% {background-position: 0 100%; } 
+}
+
+.midground {
+  animation: parallax_mg linear 20s infinite;
+  background:  url(http://stash.rachelnabors.com/24ways2012/midground_grass.png) 0 100% repeat-x;
+  z-index: 2;
+}
+
+@keyframes parallax_mg {  
+  0% { background-position: -3000px 100%;} 
+  100% {background-position: 0 100%; } 
+}
+
+.background {
+  background-image:
+    url(http://stash.rachelnabors.com/24ways2012/background_mountain5.png),
+    url(http://stash.rachelnabors.com/24ways2012/background_mountain4.png),
+    url(http://stash.rachelnabors.com/24ways2012/background_mountain3.png),
+    url(http://stash.rachelnabors.com/24ways2012/background_mountain2.png),
+    url(http://stash.rachelnabors.com/24ways2012/background_mountain1.png);
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  z-index: 1;
+  animation: parallax_bg linear 40s infinite;
+}
+
+@keyframes parallax_bg {
+  100% { background-position-x: 2400px, 2000px, 1800px, 1600px, 1200px;}
+}
+
+body {
+    background: linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%),
+    #d2d2d2 url(http://stash.rachelnabors.com/24ways2012/background_clouds.png);
+}
+    </style>
+<script>
+  window.console = window.console || function(t) {};
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+<script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
 </head>
-<body>
-	<div class="content-top">This is a place where you can put a header</div>
-	<div class="content">
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque auctor tincidunt sapien vel laoreet. Phasellus sit amet justo mollis, eleifend nibh volutpat, sodales libero. Sed sed eros nec lorem facilisis faucibus. Mauris a orci nec nisl elementum tempus at sed quam. Pellentesque lacinia congue massa aliquam ullamcorper. Praesent hendrerit, nibh eu suscipit sagittis, dui libero varius quam, nec placerat sapien sem eget lacus. Quisque pretium tristique quam, in dictum nibh iaculis a. Vestibulum suscipit interdum cursus. Vivamus a lacus porta, convallis arcu ac, congue nisl. Morbi pretium tellus eu sagittis condimentum. Curabitur nibh mi, dictum sit amet nisl a, facilisis maximus lacus. Quisque et tempor dui, non eleifend libero. Maecenas consectetur porttitor massa, sit amet commodo justo congue eu. Donec interdum magna ut orci maximus elementum. Fusce blandit tincidunt arcu et luctus. Vestibulum ac mauris venenatis, tincidunt nunc convallis, feugiat diam.</p>
-
-	<p>Suspendisse sit amet augue porttitor, dapibus urna id, tristique massa. Donec suscipit nunc mauris, in porttitor turpis aliquam in. Vivamus ullamcorper quis neque sed ultrices. Aenean eget augue dui. Praesent vel suscipit ipsum. Pellentesque quis turpis mattis, ornare leo nec, consectetur nulla. Aliquam erat volutpat. Etiam lobortis tellus at hendrerit tincidunt. Aenean eleifend aliquam metus, et sollicitudin odio maximus a. Nam vestibulum in dui vel euismod. Vestibulum eget malesuada erat, at interdum nisi. Nam posuere accumsan ex vel hendrerit. Suspendisse eget pretium nisi, vel fringilla ante. Mauris vulputate aliquet nulla, ac mollis urna sodales sed. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec velit mauris, malesuada sit amet ligula vitae, tristique molestie est.</p>
-
-	<p>Aenean eget laoreet mi. Pellentesque ex nisi, finibus nec mauris ac, volutpat pharetra lacus. Nunc facilisis sagittis malesuada. Cras at volutpat ligula, non egestas tortor. In et pellentesque nibh. Integer sit amet blandit purus. Vestibulum faucibus quam in nisi finibus ullamcorper. Nunc consequat orci quis dui eleifend, ac pretium dolor scelerisque. Sed tellus tortor, consectetur eu est non, ultricies pellentesque massa. Mauris sit amet lacus at nunc pretium mollis.</p>
-
-	<p>Nunc vestibulum sit amet sapien eu ornare. Vestibulum ac velit risus. Donec lorem magna, tempus in erat faucibus, pretium tristique dui. Suspendisse tincidunt et lorem et consequat. Vivamus lacinia viverra rutrum. In id mollis sem, eget ullamcorper tellus. Curabitur malesuada iaculis erat, sed hendrerit justo commodo vel. Nulla congue at enim quis accumsan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In scelerisque nisl a finibus rutrum.</p>
-
-	
-	
-	
-	</div>
-	
-	
-	
+<body translate="no">
+<div class="foreground"></div>
+<div class="midground">
+<div class="tuna"></div>
+</div>
+<div class="background">
+</div>
 </body>
 </html>
